--- a/index.html
+++ b/index.html
@@ -119,26 +119,26 @@
     <div id="clientes" class="container-clientes">
         <h3 class="clientes-title">Clientes</h3>
         <div class="logos-clientes">
-            <img src="../img/Clientes/Logos/1-etermax.jpg" class="logo" alt="Logo Cliente 1">
-            <img src="../img/Clientes/Logos/2-aae.jpg" class="logo" alt="Logo Cliente 2">
-            <img src="../img/clientes/Logos/3-sb.jpg" class="logo" alt="Logo Cliente 3">
-            <img src="../img/clientes/Logos/4-mostaza.jpg" class="logo" alt="Logo Cliente 4">
-            <img src="../img/clientes/Logos/5-bk.jpg" class="logo" alt="Logo Cliente 5">
-            <img src="../img/clientes/Logos/6-coca-cola.jpg" class="logo" alt="Logo Cliente 6">
-            <img src="../img/clientes/Logos/7-CARREFOURLOGO.jpg" class="logo" alt="Logo Cliente 7">
-            <img src="../img/clientes/Logos/8-multiplex.jpg" class="logo" alt="Logo Cliente 8">
-            <img src="../img/clientes/Logos/9-genne.jpg" class="logo" alt="Logo Cliente 9">
-            <img src="../img/clientes/Logos/10-BGH-LOGO.jpg" class="logo" alt="Logo Cliente 10">
-            <img src="../img/clientes/Logos/11-juncal.jpg" class="logo" alt="Logo Cliente 11">
-            <img src="../img/clientes/Logos/12-cemic.jpg" class="logo" alt="Logo Cliente 12">
-            <img src="../img/clientes/Logos/13-ruibal.jpg" class="logo" alt="Logo Cliente 13">
-            <img src="../img/clientes/Logos/14-clinica-chapelco.jpg" class="logo" alt="Logo Cliente 14">
-            <img src="../img/clientes/Logos/15-clinica-indep.jpg" class="logo" alt="Logo Cliente 15">
-            <img src="../img/clientes/Logos/16-sanatorio-colegiales.jpg" class="logo" alt="Logo Cliente 16">
-            <img src="../img/clientes/Logos/17-aildelman.jpg" class="logo" alt="Logo Cliente 17">
-            <img src="../img/clientes/Logos/18-intek.jpg" class="logo" alt="Logo Cliente 18">
-            <img src="../img/clientes/Logos/19-synte.jpg" class="logo" alt="Logo Cliente 19">
-            <img src="../img/clientes/Logos/20-ossira.jpg" class="logo" alt="Logo Cliente 20">
+            <img src="./img/Clientes/Logos/1-etermax.jpg" class="logo" alt="Logo Cliente 1">
+            <img src="./img/Clientes/Logos/2-aae.jpg" class="logo" alt="Logo Cliente 2">
+            <img src="./img/clientes/Logos/3-sb.jpg" class="logo" alt="Logo Cliente 3">
+            <img src="./img/clientes/Logos/4-mostaza.jpg" class="logo" alt="Logo Cliente 4">
+            <img src="./img/clientes/Logos/5-bk.jpg" class="logo" alt="Logo Cliente 5">
+            <img src="./img/clientes/Logos/6-coca-cola.jpg" class="logo" alt="Logo Cliente 6">
+            <img src="./img/clientes/Logos/7-CARREFOURLOGO.jpg" class="logo" alt="Logo Cliente 7">
+            <img src="./img/clientes/Logos/8-multiplex.jpg" class="logo" alt="Logo Cliente 8">
+            <img src="./img/clientes/Logos/9-genne.jpg" class="logo" alt="Logo Cliente 9">
+            <img src="./img/clientes/Logos/10-BGH-LOGO.jpg" class="logo" alt="Logo Cliente 10">
+            <img src="./img/clientes/Logos/11-juncal.jpg" class="logo" alt="Logo Cliente 11">
+            <img src="./img/clientes/Logos/12-cemic.jpg" class="logo" alt="Logo Cliente 12">
+            <img src="./img/clientes/Logos/13-ruibal.jpg" class="logo" alt="Logo Cliente 13">
+            <img src="./img/clientes/Logos/14-clinica-chapelco.jpg" class="logo" alt="Logo Cliente 14">
+            <img src="./img/clientes/Logos/15-clinica-indep.jpg" class="logo" alt="Logo Cliente 15">
+            <img src="./img/clientes/Logos/16-sanatorio-colegiales.jpg" class="logo" alt="Logo Cliente 16">
+            <img src="./img/clientes/Logos/17-aildelman.jpg" class="logo" alt="Logo Cliente 17">
+            <img src="./img/clientes/Logos/18-intek.jpg" class="logo" alt="Logo Cliente 18">
+            <img src="./img/clientes/Logos/19-synte.jpg" class="logo" alt="Logo Cliente 19">
+            <img src="./img/clientes/Logos/20-ossira.jpg" class="logo" alt="Logo Cliente 20">
         </div>
     </div>
     <!--div class="container-novedades">
