--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     crecimiento está basado en pilares fundamentales, tales como brindar servicio al cliente, ofrecer
                     los mejores precios del mercado, contar con un sólido respaldo técnico, y una situación patrimonial
                     acorde con los emprendimientos. Esto ha generado la renovación del aval de nuestros clientes, los
-                    cuales no dudan en recomendarnos a sus vinculados, dando así continuidad al movimiento de nuestra
+                    cuales no dudan en recomendarnos a sus vinculados, dando así continuidad y crecimiento a nuestra
                     empresa.</p>
             </div>
             <div class="col-md-6">
@@ -135,16 +135,12 @@
             <img src="./img/Clientes/Logos/14-clinica-chapelco.jpg" class="logo" alt="Logo Cliente 14">
             <img src="./img/Clientes/Logos/15-clinica-indep.jpg" class="logo" alt="Logo Cliente 15">
             <img src="./img/Clientes/Logos/16-sanatorio-colegiales.jpg" class="logo" alt="Logo Cliente 16">
-            <img src="./img/Clientes/Logos/17-aildelman.jpg" class="logo" alt="Logo Cliente 17">
+            <img src="./img/Clientes/Logos/17-smq.jpg" class="logo" alt="Logo Cliente 17">
             <img src="./img/Clientes/Logos/18-intek.jpg" class="logo" alt="Logo Cliente 18">
             <img src="./img/Clientes/Logos/19-synte.jpg" class="logo" alt="Logo Cliente 19">
             <img src="./img/Clientes/Logos/20-ossira.jpg" class="logo" alt="Logo Cliente 20">
         </div>
     </div>
-    <!--div class="container-novedades">
-        <h2>NOVEDADES</h2>
-        <img src="./img/protocolo-visita-service-1-scaled.jpg" class="novedades" alt="Novedades">
-    </div-->
 
     <div id="contacto" class="container-contactanos">
         <h2>CONTACTANOS</h2>
@@ -157,7 +153,7 @@
         <div class="info-contacto">
             <p>Oficina Principal</p>
             <p>Santa Magdalena 550 (C.P 1439), CABA, Buenos Aires, Argentina</p>
-            <p>TEL: xxxxx-xxxxx</p>
+            <p>TEL: +54 9 11 4804-8891</p>
             <p>Email: administracion@hladan.com.ar</p>
         </div>
     
